# c_programming

./: .gitignore  CMakeLists.txt
mylib/: bubble_sorting.c  bubble_sorting.h  selection_sort.c  selection_sort.h  sort.c  sort.h
sorting/: test_bubble_sort.c  test_insertion_sort.c  test_selection_sort.c
temp_code/: first_clion.c  loop.c
